# chatbot_msgs

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
action/: Chatbot.action  ChatbotServer.action  ChatbotTrain.action  Conversation.action  Dialogue.action  RasaTrain.action
msg/: Context.msg  Event.msg  Intent.msg  Parameter.msg  Status.msg
srv/: GetActiveChatbot.srv  GetResponse.srv  ResetModel.srv  ResetModels.srv
